Major swagger improvement
