# server/cmd/main.go
@@ -16,17 +16,17 @@ func main() {
 
 	log.SetFlags(log.LstdFlags)
 	router := http.NewServeMux()
-	router.HandleFunc("/play/{id}", pkg.Play)
+	router.HandleFunc("/play/{song_id}", pkg.Play)
 	router.HandleFunc("/segments/{song}/{file}", pkg.PlaySegment)
-	router.HandleFunc("/fetch/{type}", admin.ValidateJwt(http.HandlerFunc(pkg.Fetch)))
-	router.HandleFunc("DELETE /deleteSong/{song}", admin.ValidateJwt(http.HandlerFunc(pkg.DeleteHandler)))
+	router.HandleFunc("GET /fetch/{type}", admin.ValidateJwt(http.HandlerFunc(pkg.Fetch)))
+	router.HandleFunc("DELETE /delete_song/{song_id}", admin.ValidateJwt(http.HandlerFunc(pkg.DeleteHandler)))
 	router.HandleFunc("POST /add_playlist", admin.ValidateJwt(http.HandlerFunc(pkg.AddPlaylist)))
 	router.HandleFunc("POST /add_to_playlist/{playlist_id}/{song_id}", admin.ValidateJwt(http.HandlerFunc(pkg.AddToPlaylist)))
 	router.HandleFunc("GET /get_playlists", admin.ValidateJwt(http.HandlerFunc(pkg.GetUserPlaylists)))
 	router.HandleFunc("POST /login", admin.UserLogin)
-    router.HandleFunc("POST /upload_song", admin.ValidateJwt(http.HandlerFunc(pkg.UploadSong)))
-    router.HandleFunc("POST /radio/{id}", admin.ValidateJwt(http.HandlerFunc(pkg.Radio)))
-	router.HandleFunc("DELETE /delete_playlist/{id}", admin.ValidateJwt(http.HandlerFunc(pkg.DeletePlaylist)))
+	router.HandleFunc("POST /upload_song", admin.ValidateJwt(http.HandlerFunc(pkg.UploadSong)))
+	router.HandleFunc("GET /radio/{song_id}", admin.ValidateJwt(http.HandlerFunc(pkg.Radio)))
+	router.HandleFunc("DELETE /delete_playlist/{playlist_id}", admin.ValidateJwt(http.HandlerFunc(pkg.DeletePlaylist)))
 	router.HandleFunc("DELETE /delete_from_playlist/{playlist_id}/{song_id}", admin.ValidateJwt(http.HandlerFunc(pkg.DeleteFromPlaylist)))
 	// Admin for browser
 	router.HandleFunc("GET /admin/login", admin.AdminLogin)
